--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 ---
 layout: default
-title: Your New Jekyll Site
+title: alerta monitoring system
+categories: front
+tags: [overview]
 ---
 
 <div id="home">
