--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 ---
-layout: default
-title: alerta monitoring system
-categories: front
-tags: [overview]
+layout: docs
+title: Alerta
+permalink: /home/
+categories: introduction
+tags: [intro]
 ---
 
 <div id="home">
