--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ title: alerta
             <div class="carousel-caption">
               <h1>Deploy using the Heroku button.</h1>
               <p>Heroku has introduced a new faster and easier way to deploy apps. Simply click the <img src="https://www.herokucdn.com/deploy/button.png" alt="Deploy on Heroku"> button in the GitHub repo README to get going in minutes.</p>
-              <p><a class="btn btn-lg btn-primary" href="https://github.com/guardian/alerta/tree/release/3.2" role="button">Deploy to Heroku</a></p>
+              <p><a class="btn btn-lg btn-primary" href="https://github.com/guardian/alerta" role="button">Deploy to Heroku</a></p>
             </div>
           </div>
         </div>
@@ -27,8 +27,8 @@ title: alerta
           <img src="data:image/gif;base64,R0lGODlhAQABAIAAAGZmZgAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Release 3.2 is almost ready.</h1>
-              <p>The latest version of Alerta has been in development since June 2014 and is close to being production-ready. The web UI now supports Google OAuth2 logins, API keys can be used for controlling API access, RabbitMQ is no longer a dependency and you can write you own custom plug-ins.</p>
+              <h1>Release 3.2 is in Beta.</h1>
+              <p>The latest version of Alerta has been in development since June 2014 and is now in beta. The web UI supports Google OAuth2 logins, API keys can be used for controlling API access, RabbitMQ is no longer a dependency and you can write you own custom plug-ins.</p>
               <p><a class="btn btn-lg btn-primary" href="https://github.com/guardian/alerta/pull/67" role="button">Learn more</a></p>
             </div>
           </div>
@@ -39,6 +39,16 @@ title: alerta
             <div class="carousel-caption">
               <h1>Explore the Alerta API.</h1>
               <p>Developers can now use a web UI to explore some of the most important features of the Alerta API -- sending and querying for alerts. Any alerts sent to the API using the explorer can be viewed in the explorer or the <a href="http://try.alerta.io/">web console</a> available online.</p>
+              <p><a class="btn btn-lg btn-primary" href="http://explorer.alerta.io" role="button">Explore the API</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img src="data:image/gif;base64,R0lGODlhAQABAIAAAFVVVQAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Filter, search, top 10 and watch important alerts.</h1>
+              <p>Slice and dice alerts based on any attribute. Future release will allow the creation of custom views.</p>
               <p><a class="btn btn-lg btn-primary" href="http://explorer.alerta.io" role="button">Explore the API</a></p>
             </div>
           </div>
