update for release 3.3

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@ title: alerta
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
         <li data-target="#myCarousel" data-slide-to="2"></li>
-        <li data-target="#myCarousel" data-slide-to="3"></li>
       </ol>
       <div class="carousel-inner">
         <div class="item active">
@@ -28,9 +27,9 @@ title: alerta
           <img src="data:image/gif;base64,R0lGODlhAQABAIAAAGZmZgAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Release 3.2 is in Beta.</h1>
-              <p>The latest version of Alerta has been in development since June 2014 and is now in beta. The web UI supports Google OAuth2 logins, API keys can be used for controlling API access, RabbitMQ is no longer a dependency and you can write you own custom plug-ins.</p>
-              <p><a class="btn btn-lg btn-primary" href="https://github.com/guardian/alerta/pull/67" role="button">Learn more</a></p>
+              <h1>Release 3.3 is available.</h1>
+              <p>Development of Alerta has gained pace again and Release 3.3 follows hot on the heels of 3.2. This release focuses on integrations and for this release there are out-of-the-box integrations with Amazon AWS <a href="http://aws.amazon.com/cloudwatch/">CloudWatch</a>, <a href="https://www.pingdom.com/">Pingdom and <a href="https://slack.com/is">Slack</a>.</p>
+              <p><a class="btn btn-lg btn-primary" href="http://docs.alerta.io/en/latest/release-notes.html" role="button">Learn more</a></p>
             </div>
           </div>
         </div>
@@ -40,16 +39,6 @@ title: alerta
             <div class="carousel-caption">
               <h1>Explore the Alerta API.</h1>
               <p>Developers can now use a web UI to explore some of the most important features of the Alerta API -- sending and querying for alerts. Any alerts sent to the API using the explorer can be viewed in the explorer or the <a href="http://try.alerta.io/">web console</a> available online.</p>
-              <p><a class="btn btn-lg btn-primary" href="http://explorer.alerta.io" role="button">Explore the API</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="item">
-          <img src="data:image/gif;base64,R0lGODlhAQABAIAAAFVVVQAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>Filter, search, top 10 and watch important alerts.</h1>
-              <p>Slice and dice alerts based on any attribute. Future release will allow the creation of custom views.</p>
               <p><a class="btn btn-lg btn-primary" href="http://explorer.alerta.io" role="button">Explore the API</a></p>
             </div>
           </div>
