missed closing a href tag

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ title: alerta
           <div class="container">
             <div class="carousel-caption">
               <h1>Release 3.3 is available.</h1>
-              <p>Development of Alerta has gained pace again and Release 3.3 follows hot on the heels of 3.2. This release focuses on integrations and for this release there are out-of-the-box integrations with Amazon AWS <a href="http://aws.amazon.com/cloudwatch/">CloudWatch</a>, <a href="https://www.pingdom.com/">Pingdom and <a href="https://slack.com/is">Slack</a>.</p>
+              <p>Development of Alerta has gained pace again and Release 3.3 follows hot on the heels of 3.2. This release focuses on integrations and for this release there are out-of-the-box integrations with Amazon AWS <a href="http://aws.amazon.com/cloudwatch/">CloudWatch</a>, <a href="https://www.pingdom.com/">Pingdom</a> and <a href="https://slack.com/is">Slack</a>.</p>
               <p><a class="btn btn-lg btn-primary" href="http://docs.alerta.io/en/latest/release-notes.html" role="button">Learn more</a></p>
             </div>
           </div>
