--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@ title: alerta
           <div class="container">
             <div class="carousel-caption">
               <h1>Deploy using the Heroku button.</h1>
-              <p>Heroku has introduced a new faster and easier way to deploy apps. Simply click the <img src="https://www.herokucdn.com/deploy/button.png" alt="Deploy on Heroku"> button in the GitHub repo README to get going in minutes.</p>
-              <p><a class="btn btn-lg btn-primary" href="https://github.com/guardian/alerta" role="button">Deploy to Heroku</a></p>
+              <p>Heroku has introduced a new faster and easier way to deploy apps. Simply click the <img src="https://www.herokucdn.com/deploy/button.png" alt="Deploy on Heroku"> button in the GitHub repo README for <a href="https://github.com/guardian/alerta#deploy-to-the-cloud">alerta</a> or the <a href="https://github.com/alerta/angular-alerta-webui#deploy-to-the-cloud">web ui</a> to get going in minutes.</p>
+              <p><a class="btn btn-lg btn-primary" href="https://github.com/guardian/alerta#deploy-to-the-cloud" role="button">Deploy to Heroku</a></p>
             </div>
           </div>
         </div>
