update for release 4.0

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@ title: alerta
           <img src="data:image/gif;base64,R0lGODlhAQABAIAAAGZmZgAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Release 3.3 is available.</h1>
-              <p>Development of Alerta has gained pace again and Release 3.3 follows hot on the heels of 3.2. This release focuses on integrations and for this release there are out-of-the-box integrations with Amazon AWS <a href="http://aws.amazon.com/cloudwatch/">CloudWatch</a>, <a href="https://www.pingdom.com/">Pingdom</a> and <a href="https://slack.com/is">Slack</a>.</p>
+              <h1>Release 4.0 is available.</h1>
+              <p>Following closely after Release 3.3 which introduced new out-of-the-box integrations with Amazon AWS <a href="http://aws.amazon.com/cloudwatch/">CloudWatch</a>, <a href="https://www.pingdom.com/">Pingdom</a> and <a href="https://slack.com/is">Slack</a> the latest release has improved Google OAuth login and introduced support for GitHub OAuth login.</p>
               <p><a class="btn btn-lg btn-primary" href="http://docs.alerta.io/en/latest/release-notes.html" role="button">Learn more</a></p>
             </div>
           </div>
