--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ title: alerta
           <div class="container">
             <div class="carousel-caption">
               <h1>Release 4.0 is available.</h1>
-              <p>Following closely after Release 3.3 which introduced new out-of-the-box integrations with Amazon AWS <a href="http://aws.amazon.com/cloudwatch/">CloudWatch</a>, <a href="https://www.pingdom.com/">Pingdom</a> and <a href="https://slack.com/is">Slack</a> the latest release has improved Google OAuth login and introduced support for GitHub OAuth login.</p>
+              <p>Following closely after Release 3.3 which introduced new out-of-the-box integrations with Amazon AWS <a href="http://aws.amazon.com/cloudwatch/">CloudWatch</a>, <a href="https://www.pingdom.com/">Pingdom</a>, <a href="https://slack.com/is">Slack</a> and <a href="https://www.hipchat.com/">HipChat</a> the latest release has improved Google OAuth login and introduced support for GitHub OAuth login.</p>
               <p><a class="btn btn-lg btn-primary" href="http://docs.alerta.io/en/latest/release-notes.html" role="button">Learn more</a></p>
             </div>
           </div>
