--- a/index.html
+++ b/index.html
@@ -14,30 +14,33 @@ title: alerta
       </ol>
       <div class="carousel-inner">
         <div class="item active">
-          <img src="data:image/gif;base64,R0lGODlhAQABAIAAAGZmZgAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide">
+          <img src="/assets/images/slide-02.jpg" alt="First slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>Release 4.0 is available.</h1>
+              <hr></hr>
               <p>Following closely after Release 3.3 which introduced new out-of-the-box integrations with Amazon AWS <a href="http://aws.amazon.com/cloudwatch/">CloudWatch</a>, <a href="https://www.pingdom.com/">Pingdom</a>, <a href="https://slack.com/is">Slack</a> and <a href="https://www.hipchat.com/">HipChat</a> the latest release has improved Google OAuth login and introduced support for GitHub OAuth login.</p>
               <p><a class="btn btn-lg btn-primary" href="http://docs.alerta.io/en/latest/release-notes.html" role="button">Learn more</a></p>
             </div>
           </div>
         </div>
         <div class="item">
-          <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
+          <img src="/assets/images/slide-03.jpg" alt="Second slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>Deploy using the Heroku button.</h1>
+              <hr></hr>
               <p>Heroku has introduced a new faster and easier way to deploy apps. Simply click the <img src="https://www.herokucdn.com/deploy/button.png" alt="Deploy on Heroku"> button in the GitHub repo README for <a href="https://github.com/guardian/alerta#deploy-to-the-cloud">alerta</a> or the <a href="https://github.com/alerta/angular-alerta-webui#deploy-to-the-cloud">web ui</a> to get going in minutes.</p>
               <p><a class="btn btn-lg btn-primary" href="https://github.com/guardian/alerta#deploy-to-the-cloud" role="button">Deploy to Heroku</a></p>
             </div>
           </div>
         </div>
         <div class="item">
-          <img src="data:image/gif;base64,R0lGODlhAQABAIAAAFVVVQAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
+          <img src="/assets/images/slide-01.jpg" alt="Third slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>Explore the Alerta API.</h1>
+              <hr></hr>
               <p>Developers can now use a web UI to explore some of the most important features of the Alerta API -- sending and querying for alerts. Any alerts sent to the API using the explorer can be viewed in the explorer or the <a href="http://try.alerta.io/">web console</a> available online.</p>
               <p><a class="btn btn-lg btn-primary" href="http://explorer.alerta.io" role="button">Explore the API</a></p>
             </div>
