--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@ title: alerta
           <img src="/assets/images/slide-02.jpg" alt="First slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Release 4.0 is available.</h1>
+              <h1>Release 4.2 is available.</h1>
               <hr></hr>
-              <p>Following closely after Release 3.3 which introduced new out-of-the-box integrations with Amazon AWS <a href="http://aws.amazon.com/cloudwatch/">CloudWatch</a>, <a href="https://www.pingdom.com/">Pingdom</a>, <a href="https://slack.com/is">Slack</a> and <a href="https://www.hipchat.com/">HipChat</a> the latest release has improved Google OAuth login and introduced support for GitHub OAuth login.</p>
+              <p>After the success of Release 4.0 which introduced new integrations with Amazon AWS <a href="http://aws.amazon.com/cloudwatch/">CloudWatch</a>, <a href="https://www.pingdom.com/">Pingdom</a>, <a href="https://slack.com/is">Slack</a> and <a href="https://www.hipchat.com/">HipChat</a> the latest release has support for OAuth login using Google, GitHub and Twitter and out-of-the-box integration with <a href="http://www.pagerduty.com/">PagerDuty</a>.</p>
               <p><a class="btn btn-lg btn-primary" href="http://docs.alerta.io/en/latest/release-notes.html" role="button">Learn more</a></p>
             </div>
           </div>
