update for release 4.4

--- a/index.html
+++ b/index.html
@@ -11,21 +11,29 @@ title: alerta
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
         <li data-target="#myCarousel" data-slide-to="2"></li>
+        <li data-target="#myCarousel" data-slide-to="3"></li>
       </ol>
       <div class="carousel-inner">
-        <div class="item active">
-          <img src="/assets/images/slide-02.jpg" alt="First slide">
+        <div class="item item-1 active">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Release 4.2 is available.</h1>
+              <h1>Release 4.4 is available.</h1>
               <hr></hr>
-              <p>After the success of Release 4.0 which introduced new integrations with Amazon AWS <a href="http://aws.amazon.com/cloudwatch/">CloudWatch</a>, <a href="https://www.pingdom.com/">Pingdom</a>, <a href="https://slack.com/is">Slack</a> and <a href="https://www.hipchat.com/">HipChat</a> the latest release has support for OAuth login using Google, GitHub and Twitter and out-of-the-box integration with <a href="http://www.pagerduty.com/">PagerDuty</a>.</p>
+              <p>Alerta now supports <a href="http://docs.mongodb.org/manual/release-notes/3.0/">MongoDB 3.0</a> as the backend database. Backward compatibility with MongoDB 2.x is still supported.</p>
+            </div>
+          </div>
+        </div>
+        <div class="item item-2">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Keep track of individual alerts.</h1>
+              <hr></hr>
+              <p>Logged in users can manage and watch alerts that are of interest to them. So to make user management as simple as possible there is built-in support for OAuth user logins using Google, GitHub and Twitter as well as Basic Auth for situations where OAuth isn't available.</p>
               <p><a class="btn btn-lg btn-primary" href="http://docs.alerta.io/en/latest/release-notes.html" role="button">Learn more</a></p>
             </div>
           </div>
         </div>
-        <div class="item">
-          <img src="/assets/images/slide-03.jpg" alt="Second slide">
+        <div class="item item-3">
           <div class="container">
             <div class="carousel-caption">
               <h1>Deploy using the Heroku button.</h1>
@@ -35,8 +43,7 @@ title: alerta
             </div>
           </div>
         </div>
-        <div class="item">
-          <img src="/assets/images/slide-01.jpg" alt="Third slide">
+        <div class="item item-4">
           <div class="container">
             <div class="carousel-caption">
               <h1>Explore the Alerta API.</h1>
