update release 4.4 again

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@ title: alerta
             <div class="carousel-caption">
               <h1>Release 4.4 is available.</h1>
               <hr></hr>
-              <p>Alerta now supports <a href="http://docs.mongodb.org/manual/release-notes/3.0/">MongoDB 3.0</a> as the backend database. Backward compatibility with MongoDB 2.x is still supported.</p>
+              <p>Alerta now supports <a href="http://docs.mongodb.org/manual/release-notes/3.0/">MongoDB 3.0</a> as the backend database. Backward compatibility with MongoDB 2.x is still supported. And don't forget about the out-of-the-box integrations with <a href="http://aws.amazon.com/cloudwatch/">CloudWatch</a>, <a href="https://www.pingdom.com/">Pingdom</a> and <a href="https://www.pagerduty.com/">PagerDuty</a> added in earlier 4.x releases.</p>
+              <p><a class="btn btn-lg btn-primary" href="http://try.alerta.io" role="button">Try it now</a></p>
             </div>
           </div>
         </div>
