add oauth links

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ title: alerta
             <div class="carousel-caption">
               <h1>Keep track of individual alerts.</h1>
               <hr></hr>
-              <p>Logged in users can manage and watch alerts that are of interest to them. So to make user management as simple as possible there is built-in support for OAuth user logins using Google, GitHub and Twitter as well as Basic Auth for situations where OAuth isn't available.</p>
+              <p>Logged in users can manage and watch alerts that are of interest to them. So to make user management as simple as possible there is built-in support for OAuth user logins using <a href="https://developers.google.com/identity/protocols/OpenIDConnect">Google</a>, <a href="https://developer.github.com/v3/oauth/">GitHub</a> and <a href="https://dev.twitter.com/oauth">Twitter</a> as well as Basic Auth for situations where OAuth isn't available.</p>
               <p><a class="btn btn-lg btn-primary" href="http://docs.alerta.io/en/latest/release-notes.html" role="button">Learn more</a></p>
             </div>
           </div>
