--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ title: alerta
       </ol>
       <div class="carousel-inner">
         <div class="item item-1 active">
+          <img src="data:image/gif;base64,R0lGODlhAQABAIAAAGZmZgAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Slide 1">
           <div class="container">
             <div class="carousel-caption">
               <h1>Release 4.4 is available.</h1>
@@ -25,6 +26,7 @@ title: alerta
           </div>
         </div>
         <div class="item item-2">
+          <img src="data:image/gif;base64,R0lGODlhAQABAIAAAGZmZgAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Slide 2">
           <div class="container">
             <div class="carousel-caption">
               <h1>Keep track of individual alerts.</h1>
@@ -35,6 +37,7 @@ title: alerta
           </div>
         </div>
         <div class="item item-3">
+          <img src="data:image/gif;base64,R0lGODlhAQABAIAAAGZmZgAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Slide 3">
           <div class="container">
             <div class="carousel-caption">
               <h1>Deploy using the Heroku button.</h1>
@@ -45,6 +48,7 @@ title: alerta
           </div>
         </div>
         <div class="item item-4">
+          <img src="data:image/gif;base64,R0lGODlhAQABAIAAAGZmZgAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Slide 4">
           <div class="container">
             <div class="carousel-caption">
               <h1>Explore the Alerta API.</h1>
