--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ title: alerta
           </div>
         </div>
         <div class="item item-4">
-          <img src="data:image/gif;base64,R0lGODlhAQABAIAAAGZmZgAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Slide 4">
+          <img src="/assets/images/slide-01.jpg" alt="Slide 4">
           <div class="container">
             <div class="carousel-caption">
               <h1>Explore the Alerta API.</h1>
