--- a/index.html
+++ b/index.html
@@ -12,32 +12,33 @@ title: alerta
         <li data-target="#myCarousel" data-slide-to="1"></li>
         <li data-target="#myCarousel" data-slide-to="2"></li>
         <li data-target="#myCarousel" data-slide-to="3"></li>
+        <li data-target="#myCarousel" data-slide-to="4"></li>
       </ol>
       <div class="carousel-inner">
         <div class="item item-1 active">
-          <img src="/assets/images/slide-02.jpg" alt="Slide 1">
+          <img src="/assets/images/slide-01.jpg" alt="Slide 1">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Release 4.4 is available.</h1>
+              <h1>Release 4.7 is available.</h1>
               <hr></hr>
-              <p>Alerta now supports <a href="http://docs.mongodb.org/manual/release-notes/3.0/">MongoDB 3.0</a> as the backend database. Backward compatibility with MongoDB 2.x is still supported. And don't forget about the out-of-the-box integrations with <a href="http://aws.amazon.com/cloudwatch/">CloudWatch</a>, <a href="https://www.pingdom.com/">Pingdom</a> and <a href="https://www.pagerduty.com/">PagerDuty</a> added in earlier 4.x releases.</p>
+              <p>Alerta now integrates out-of-the-box with <a href="">Prometheus</a> and there is native support in <a href="">InfluxDB Kapacitor</a> for alert forwarding to Alerta. Integration with PagerDuty now includes bi-directional alert acknowledgement.</p>
               <p><a class="btn btn-lg btn-primary" href="http://try.alerta.io" role="button">Try it now</a></p>
             </div>
           </div>
         </div>
         <div class="item item-2">
-          <img src="/assets/images/slide-03.jpg" alt="Slide 2">
+          <img src="/assets/images/slide-02.jpg" alt="Slide 2">
           <div class="container">
             <div class="carousel-caption">
               <h1>Keep track of individual alerts.</h1>
               <hr></hr>
-              <p>Logged in users can manage and watch alerts that are of interest to them. So to make user management as simple as possible there is built-in support for OAuth user logins using <a href="https://developers.google.com/identity/protocols/OpenIDConnect">Google</a>, <a href="https://developer.github.com/v3/oauth/">GitHub</a> and <a href="https://dev.twitter.com/oauth">Twitter</a> as well as Basic Auth for situations where OAuth isn't available.</p>
+              <p>Logged in users can manage and watch alerts that are of interest to them. So to make user management as simple as possible there is built-in support for OAuth user logins using <a href="https://developers.google.com/identity/protocols/OpenIDConnect">Google</a>, <a href="https://developer.github.com/v3/oauth/">GitHub</a> and <a href="http://doc.gitlab.com/ce/integration/oauth_provider.html">GitLab</a> as well as Basic Auth for situations where OAuth isn't available.</p>
               <p><a class="btn btn-lg btn-primary" href="http://docs.alerta.io/en/latest/release-notes.html" role="button">Learn more</a></p>
             </div>
           </div>
         </div>
         <div class="item item-3">
-          <img src="/assets/images/slide-02.jpg" alt="Slide 3">
+          <img src="/assets/images/slide-03.jpg" alt="Slide 3">
           <div class="container">
             <div class="carousel-caption">
               <h1>Deploy using the Heroku button.</h1>
@@ -55,6 +56,17 @@ title: alerta
               <hr></hr>
               <p>Developers can now use a web UI to explore some of the most important features of the Alerta API -- sending and querying for alerts. Any alerts sent to the API using the explorer can be viewed in the explorer or the <a href="http://try.alerta.io/">web console</a> available online.</p>
               <p><a class="btn btn-lg btn-primary" href="http://explorer.alerta.io" role="button">Explore the API</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="item item-5">
+          <img src="/assets/images/slide-02.jpg" alt="Slide 5">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Partition alerts by customer.</h1>
+              <hr></hr>
+              <p>Manage multiple customers using a single instance of Alerta via <a href="http://docs.alerta.io/en/latest/customerviews.html">customer views.</a> Customers can only see and action their own alerts. An admin user can see alerts from all customers.</p>
+              <p><a class="btn btn-lg btn-primary" href="http://docs.alerta.io/en/latest/customerviews.html" role="button">Learn more</a></p>
             </div>
           </div>
         </div>
