--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@ title: alerta
           <img src="/assets/images/slide-01.jpg" alt="Slide 1">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Release 4.7 is available.</h1>
+              <h1>Release 4.8 is available.</h1>
               <hr></hr>
-              <p>Alerta now integrates out-of-the-box with <a href="https://prometheus.io/">Prometheus</a> and <a href="https://cloud.google.com/stackdriver/">Google Stackdriver</a> and there is native support in <a href="">InfluxDB Kapacitor</a> for alert forwarding to Alerta. Integration with PagerDuty now includes bi-directional alert acknowledgement.</p>
+              <p>Alerta now integrates out-of-the-box with <a href="https://prometheus.io/">Prometheus</a> and <a href="https://cloud.google.com/stackdriver/">Google Stackdriver</a> and there is native support in <a href="">InfluxDB Kapacitor</a> for alert forwarding to Alerta. Integration with PagerDuty and Telegram now includes bi-directional alert acknowledgement.</p>
               <p><a class="btn btn-lg btn-primary" href="http://try.alerta.io" role="button">Try it now</a></p>
             </div>
           </div>
