--- a/index.html
+++ b/index.html
@@ -13,13 +13,27 @@ title: alerta
         <li data-target="#myCarousel" data-slide-to="2"></li>
         <li data-target="#myCarousel" data-slide-to="3"></li>
         <li data-target="#myCarousel" data-slide-to="4"></li>
+        <li data-target="#myCarousel" data-slide-to="5"></li>
       </ol>
       <div class="carousel-inner">
         <div class="item item-1 active">
-          <img src="/assets/images/slide-01.jpg" alt="Slide 1">
+            <img src="/assets/images/slide-01.jpg" alt="Slide 1">
+            <div class="container">
+              <div class="carousel-caption">
+                <h1>Release 5 has PostgreSQL support.</h1>
+                <hr></hr>
+                <p>Support for PostgreSQL 9.6 has been added to the API so it is now
+                  possible to deploy to AWS and use Amazon RDS or Google Cloud and
+                  use Cloud SQL for pain-free deployment and maintenance.</p>
+                <p><a class="btn btn-lg btn-primary" href="https://github.com/alerta/alerta/wiki/Release-5-FAQ" role="button">Find out more</a></p>
+              </div>
+            </div>
+          </div>
+        <div class="item item-2">
+          <img src="/assets/images/slide-02.jpg" alt="Slide 2">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Release 4.10 is out!</h1>
+              <h1>More integrations!</h1>
               <hr></hr>
               <p>Alerta now integrates out-of-the-box with
                 <a href="https://prometheus.io/">Prometheus</a> and
@@ -31,8 +45,8 @@ title: alerta
             </div>
           </div>
         </div>
-        <div class="item item-2">
-          <img src="/assets/images/slide-02.jpg" alt="Slide 2">
+        <div class="item item-3">
+          <img src="/assets/images/slide-03.jpg" alt="Slide 3">
           <div class="container">
             <div class="carousel-caption">
               <h1>Keep track of individual alerts.</h1>
@@ -49,8 +63,8 @@ title: alerta
             </div>
           </div>
         </div>
-        <div class="item item-3">
-          <img src="/assets/images/slide-03.jpg" alt="Slide 3">
+        <div class="item item-4">
+          <img src="/assets/images/slide-01.jpg" alt="Slide 4">
           <div class="container">
             <div class="carousel-caption">
               <h1>Deploy using Docker.</h1>
@@ -63,24 +77,32 @@ title: alerta
             </div>
           </div>
         </div>
-        <div class="item item-4">
-          <img src="/assets/images/slide-01.jpg" alt="Slide 4">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>Explore the Alerta API.</h1>
-              <hr></hr>
-              <p>Developers can now use a web UI to explore some of the most important features of the Alerta API -- sending and querying for alerts. Any alerts sent to the API using the explorer can be viewed in the explorer or the <a href="http://try.alerta.io/">web console</a> available online.</p>
-              <p><a class="btn btn-lg btn-primary" href="http://explorer.alerta.io" role="button">Explore the API</a></p>
-            </div>
-          </div>
-        </div>
         <div class="item item-5">
           <img src="/assets/images/slide-02.jpg" alt="Slide 5">
           <div class="container">
             <div class="carousel-caption">
+              <h1>Explore the Alerta API.</h1>
+              <hr></hr>
+              <p>Developers can now use a web UI to explore some of the
+                most important features of the Alerta API -- sending and
+                querying for alerts. Any alerts sent to the API using the
+                explorer can be viewed in the explorer or the
+                <a href="http://try.alerta.io/">web console</a> available
+                online.</p>
+              <p><a class="btn btn-lg btn-primary" href="http://explorer.alerta.io" role="button">Explore the API</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="item item-6">
+          <img src="/assets/images/slide-03.jpg" alt="Slide 6">
+          <div class="container">
+            <div class="carousel-caption">
               <h1>Partition alerts by customer.</h1>
               <hr></hr>
-              <p>Manage multiple customers using a single instance of Alerta via <a href="http://docs.alerta.io/en/latest/customerviews.html">customer views.</a> Customers can only see and action their own alerts. An admin user can see alerts from all customers.</p>
+              <p>Manage multiple customers using a single instance of Alerta
+                via <a href="http://docs.alerta.io/en/latest/customerviews.html">customer views.</a>
+                Customers can only see and action their own alerts. An admin
+                user can see alerts from all customers.</p>
               <p><a class="btn btn-lg btn-primary" href="http://docs.alerta.io/en/latest/customerviews.html" role="button">Learn more</a></p>
             </div>
           </div>
